--- a/libvirt/install/tasks/add_users_to_groups.yml
+++ b/libvirt/install/tasks/add_users_to_groups.yml
@@ -1,16 +1,6 @@
-- name: Add current user to required groups
-  become: true
-  vars:
-    user_name: "{{ lookup('env', 'USER') }}"
-    groups_to_add:
-      - libvirt
-      - kvm
-      - disk
-      - libvirt-qemu
-      - libvirt-dnsmasq
-  tasks:
-    - name: Ensure user is added to groups
-      user:
-        name: "{{ user_name }}"
-        groups: "{{ groups_to_add }}"
-        append: yes
+- name: Add current user to libvirt
+  become: yes
+  user:
+    name: "quintellarosa"
+    groups: libvirt
+    append: yes
