--- a/update_system.yaml
+++ b/update_system.yaml
@@ -4,12 +4,12 @@
   gather_facts: true
 
   tasks:
-    - name: Update package cache (for Debian-based systems)
+    - name: Update package cache for Debian-based systems
       apt:
         update_cache: true
       when: ansible_os_family == "Debian"
 
-    - name: Update package cache (Red Hat-based)
+    - name: Update package cache for Red Hat-based
       dnf:
         update_cache: yes
       when: ansible_os_family == "RedHat"
