--- a/kubernetes/install/tasks/firewalld.yml
+++ b/kubernetes/install/tasks/firewalld.yml
@@ -9,7 +9,11 @@
   loop:
     - 6443/tcp        # Kubernetes API server
     - 2379-2380/tcp   # etcd server client API
+    - 10248/tcp       # Kubelet health checks
+    - 10249/tcp       # kube-scheduler
     - 10250/tcp       # Kubelet API
+    - 10251/tcp       # kube-scheduler
+    - 10252/tcp       # kube-controller-manager    
     - 10256/tcp       # kube-proxy
     - 10257/tcp       # kube-controller-manager
     - 10259/tcp       # kube-scheduler
