--- a/kubernetes/install/tasks/main.yml
+++ b/kubernetes/install/tasks/main.yml
@@ -1,18 +1,23 @@
 ---
-- include_tasks: firewalld.yml
-- include_tasks: disable_swap.yml
 - include_tasks: selinux.yml
-# - include_tasks: install_iptables.yml
-# - include_tasks: load_kernel_modules.yml
-# - include_tasks: sysctl.yml
-# - include_tasks: disable_ipv6.yml
+  when: ansible_facts['os_family'] == "RedHat"
+
+- include_tasks: disable_swap.yml
+
+- include_tasks: install_iptables.yml
+
+- include_tasks: load_kernel_modules.yml
+
+- include_tasks: firewalld.yml
+
 # - include_tasks: install_docker.yml
-# - include_tasks: install_containerd.yml
-# - include_tasks: install_kubeadm.yml
-# - include_tasks: configure_cri.yml
-# - include_tasks: configure_docker.yml
-# - include_tasks: start_container_runtime.yml
-# - include_tasks: verify_container_runtime.yml
-# - include_tasks: install_kubectl.yml
-# - include_tasks: install_kubelet.yml
-# - include_tasks: enable_kubelet.yml
+
+# - include_tasks: configure_containerd.yml
+
+# - include_tasks: systemd_directives.yml
+
+# - include_tasks: add_kubernetes_repository.yml
+
+# - include_tasks: install_kubeadm_kubelet_kubectl.yml
+
+# - include_tasks: initialize_kubernetes_master.yml
