--- a/libvirt/install/tasks/install_packages.yml
+++ b/libvirt/install/tasks/install_packages.yml
@@ -20,7 +20,7 @@
   when: ansible_distribution == "OracleLinux"
 
 
-- name: Install Virtualization on Debian based systems
+- name: Install Virtualization on Ubuntu
   become: true
   apt:
     name: "{{ item }}"
