--- a/Kubernetes/install/tasks/05-open_firewall_ports.yml
+++ b/Kubernetes/install/tasks/05-open_firewall_ports.yml
@@ -19,3 +19,4 @@
     - 10259/tcp       # kube-scheduler
     - 30000-32767/tcp # NodePort Services (TCP)
     - 30000-32767/udp # NodePort Services (UDP)
+  when: ansible_facts['os_family'] == "RedHat"
