feat: Ansible YAML inventory; PowerShell script for DHCP and DNS

--- a/KVM/install/tasks/install_packages.yml
+++ b/KVM/install/tasks/install_packages.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install Virtualization on Fedora
   become: true
-  dnf:
+  sudo dnf:
     name: "@virtualization"
     state: present
   when: ansible_distribution == "Fedora"
@@ -9,7 +9,7 @@
 
 - name: Install Virtualization on Oracle linux
   become: true
-  dnf:
+  sudo dnf:
     name: "{{ item }}"
     state: present
   loop:
