--- a/Kubernetes/install/tasks/10-install_kubeadm_kubelet_kubectl.yml
+++ b/Kubernetes/install/tasks/10-install_kubeadm_kubelet_kubectl.yml
@@ -1,6 +1,6 @@
   - name: Install kubeadm, kubelet and kubectl
     become: yes
-    dnf:
+    sudo dnf:
       name: "{{ item }}"
       state: present
       disable_excludes: kubernetes
