--- a/Google_Chrome/install/tasks/add_repo.yml
+++ b/Google_Chrome/install/tasks/add_repo.yml
@@ -1,5 +1,5 @@
 - name: Enable Google Chrome repository
-  community.general.dnf_config_manager:
+  community.general.sudo dnf_config_manager:
     name: google-chrome
     state: enabled
   when: ansible_os_family == "RedHat"
