--- a/Kubernetes/install/tasks/02-disable_swap.yml
+++ b/Kubernetes/install/tasks/02-disable_swap.yml
@@ -11,7 +11,7 @@
 
 - name: Remove ZRAM on RedHat-based Linux
   become: yes
-  ansible.builtin.dnf:
+  ansible.builtin.sudo dnf:
     name:   zram-generator-defaults
     state:  absent
   when: ansible_os_family == "RedHat"
