--- a/update_system.yaml
+++ b/update_system.yaml
@@ -10,7 +10,7 @@
       when: ansible_os_family == "Debian"
 
     - name: Update package cache for Red Hat-based
-      dnf:
+      sudo dnf:
         update_cache: yes
       when: ansible_os_family == "RedHat"
 
