--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,6 +11,7 @@
 # for example, for 2.9: https://github.com/ansible/ansible/blob/stable-2.9/examples/ansible.cfg
 
 [defaults]
-interpreter_python = /usr/bin/python3.13
-inventory = ./hosts
+#interpreter_python = /usr/bin/python3.13
+interpreter_python=auto_silent
+inventory = ./inventory.yaml
 private_key_file = ~/.ssh/ansible
