New inventory format

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,5 +13,5 @@
 [defaults]
 #interpreter_python = /usr/bin/python3.13
 interpreter_python=auto_silent
-inventory = ./inventory.yaml
+inventory = ./inventory
 private_key_file = ~/.ssh/ansible
