--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,6 +12,7 @@
 
 [defaults]
 #interpreter_python = /usr/bin/python3.13
-interpreter_python=auto_silent
-inventory = ./inventory
-private_key_file = ~/.ssh/ansible
+interpreter_python  = auto_silent
+inventory           = ./inventory/Local/Precision7550/
+private_key_file    = ~/.ssh/ansible
+vault_password_file = ~/.vault_pass
